# trabalho_01_calcnum

./: CMakeLists.txt  README.md  main  main.cpp
backend/: common.h  returns.h
backend/bissecao/: bissecao.cpp  bissecao.h
backend/encontrar_intervalo/: encontrar_intervalo.cpp  encontrar_intervalo.h
backend/newton_raphson/: main  newton_raphson.cpp  newton_raphson.h
backend/posicao_falsa/: posicao_falsa.cpp  posicao_falsa.h
backend/teste_a=1/: main  teste_a1.cpp
